--- a/src/app/components/cart-modal/cart-modal.component.html
+++ b/src/app/components/cart-modal/cart-modal.component.html
@@ -1,5 +1,10 @@
 <form class="modal-container" [formGroup]="form" (ngSubmit)="submit()">
-  <button mat-icon-button aria-label="Close button" class="close-button" (click)="onNoClick()">
+  <button
+    mat-icon-button
+    aria-label="Close button"
+    class="close-button"
+    (click)="onNoClick()"
+  >
     <mat-icon>close</mat-icon>
   </button>
 
@@ -8,42 +13,59 @@
   </mat-card-header>
 
   <div class="row modal-content">
-    <img mat-card-lg-image src="{{data.product.imageUrl}}" alt="Product image">
+    <img
+      mat-card-lg-image
+      src="{{ data.product.imageUrl }}"
+      alt="Product image"
+    />
     <div class="modal-info">
-      <mat-card-subtitle class="modal-name">{{data.product.title}}</mat-card-subtitle>
+      <mat-card-subtitle class="modal-name">{{
+        data.product.title
+      }}</mat-card-subtitle>
       <div class="row modal-row">
         <span class="modal-label">Количество:</span>
         <mat-form-field appearance="outline" class="modal-field">
-          <input matNativeControl type="number" name="count" id="count" formControlName="count">
+          <input
+            matNativeControl
+            type="number"
+            name="count"
+            id="count"
+            formControlName="count"
+          />
         </mat-form-field>
         <div class="modal-countActions">
           <button
             mat-icon-button
             aria-label="Add count"
             class=""
-            type='button'
-            (click)="onCountChange(1)">
+            type="button"
+            (click)="onCountChange(1)"
+          >
             <mat-icon>keyboard_arrow_up</mat-icon>
           </button>
           <button
             mat-icon-button
             aria-label="Sub count"
-            class="" type='button'
-            (click)="onCountChange(-1)">
+            class=""
+            type="button"
+            (click)="onCountChange(-1)"
+          >
             <mat-icon>keyboard_arrow_down</mat-icon>
           </button>
         </div>
       </div>
       <div class="row modal-row">
         <span class="modal-label">Сумма:</span>
-        <span>{{form.value.total | currency:'RUB'}}</span>
+        <span>{{ form.value.total | currency: 'RUB' }}</span>
       </div>
     </div>
   </div>
 
   <mat-card-actions class="center">
     <button mat-raised-button color="primary">
-      <mat-icon aria-hidden="false" aria-label="Cart icon">add_shopping_cart</mat-icon>
+      <mat-icon aria-hidden="false" aria-label="Cart icon"
+        >add_shopping_cart</mat-icon
+      >
       <span>Добавить</span>
     </button>
   </mat-card-actions>
