--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,16 +1,23 @@
-<mat-card xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<mat-card
+  xmlns="http://www.w3.org/1999/html"
+  xmlns="http://www.w3.org/1999/html"
+>
   <div class="center image-wrapper">
-    <img mat-card-lg-image src="{{product.imageUrl}}" alt="Product image">
+    <img mat-card-lg-image src="{{ product.imageUrl }}" alt="Product image" />
   </div>
-  <mat-card-subtitle class="center product-title">{{product.title}}</mat-card-subtitle>
-  <mat-card-content class="center">{{product.price | currency:'RUB'}}</mat-card-content>
+  <mat-card-subtitle class="center product-title">{{
+    product.title
+  }}</mat-card-subtitle>
+  <mat-card-content class="center">{{
+    product.price | currency: 'RUB'
+  }}</mat-card-content>
   <mat-card-actions class="center">
     <button mat-stroked-button (click)="cartHandler()">
       <mat-icon>add_shopping_cart</mat-icon>
       <span>В корзину</span>
     </button>
     <button mat-stroked-button (click)="likeHandler()">
-      <mat-icon color="{{product.isLiked ? 'warn' : ''}}">favorite</mat-icon>
+      <mat-icon color="{{ product.isLiked ? 'warn' : '' }}">favorite</mat-icon>
     </button>
   </mat-card-actions>
 </mat-card>
