--- a/src/app/components/wishlist-item/wishlist-item.component.html
+++ b/src/app/components/wishlist-item/wishlist-item.component.html
@@ -1,11 +1,17 @@
 <div class="row wishlistItem">
   <div>
-    <img src="{{item.imageUrl}}" alt="Products image" class="wishlistItem-image">
+    <img
+      src="{{ item.imageUrl }}"
+      alt="Products image"
+      class="wishlistItem-image"
+    />
   </div>
   <div>
-    <p class="wishlistItem-title">{{item.title}}</p>
-    <p class="wishlistItem-price">{{item.price | currency:'RUB'}}</p>
-    <p class="wishlistItem-date">{{item.addDate | date:'dd-MM-yyyy hh:mm'}}</p>
+    <p class="wishlistItem-title">{{ item.title }}</p>
+    <p class="wishlistItem-price">{{ item.price | currency: 'RUB' }}</p>
+    <p class="wishlistItem-date">
+      {{ item.addDate | date: 'dd-MM-yyyy hh:mm' }}
+    </p>
   </div>
   <div class="wishlistItem-actions">
     <button mat-mini-fab class="wishlistItem-btn" (click)="onAddToCart()">
