--- a/src/app/pages/cart-page/cart-page.component.html
+++ b/src/app/pages/cart-page/cart-page.component.html
@@ -1,4 +1,7 @@
-<mat-list class="container wishlist" *ngIf="cart$ | async as cart; else loading">
+<mat-list
+  class="container wishlist"
+  *ngIf="cart$ | async as cart; else loading"
+>
   <div *ngIf="cart.length; else noItems">
     <div *ngFor="let cartItem of cart">
       <app-cart-item
@@ -11,7 +14,7 @@
     </div>
     <app-cart-form (submitHandler)="submitHandler($event)"></app-cart-form>
     <div class="submitResult">
-      <pre>{{result}}</pre>
+      <pre>{{ result }}</pre>
     </div>
   </div>
 </mat-list>
